tests/compile-fail/function_pointers/cast_box_int_to_fn_ptr.stderr
error: Undefined Behavior: using alloc968 as function pointer but it does not point to a function
  --> $DIR/cast_box_int_to_fn_ptr.rs:10:5
   |
LL |     (*g)(42) //~ ERROR it does not point to a function
   |     ^^^^^^^^ using alloc968 as function pointer but it does not point to a function
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `main` at $DIR/cast_box_int_to_fn_ptr.rs:10:5

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

